--- a/setup.cfg
+++ b/setup.cfg
@@ -8,9 +8,16 @@ license_file = LICENSE.txt
 test=pytest
 
 [tool:pytest]
-addopts = --junitxml=build/test_report.xml
-norecursedirs = aicsimageprocessing/tests/checkouts
+addopts = --junitxml=build/test_report.xml -v
+norecursedirs = aicsimageprocessing/tests/checkouts aicsimageprocessing.egg-info/*
 python_files = aicsimageprocessing/tests/*.py
 
 [flake8]
 max-line-length = 130
+
+[coverage:html]
+directory = build/coverage_html
+title = Test coverage report for aicssegmentation
+
+[coverage:xml]
+output = build/coverage.xml
