Working around a bug in scikit-fmm

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ description = "AICS Segmentation"
 //////////////////////////////////////////////////////////////////////////////////////////////////////
 
 // This package depends on scikit-fmm. It's setup.py calls numpy incorrectly within the setup,
-// before requirements can be install - thus breaking proper python installation procedures.
+// before requirements can be installed. This breaks proper python installation procedures.
 // See: https://github.com/scikit-fmm/scikit-fmm/blob/master/setup.py#L29
 
 // Hence we need to extend installDependencies to preinstall numpy before install
