--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,5 @@
 # This also provides the gradle version - run './gradlew wrapper' to set it.
 
 ####
-scriptPluginPrefix=http://stash.corp.alleninstitute.org/projects/AICSSW/repos/gradle-script-plugins/raw/
-scriptPluginSuffix=?at=refs/tags/2.1.1
+scriptPluginPrefix=https://aicsbitbucket.corp.alleninstitute.org/projects/sw/repos/gradle-script-plugins/raw/
+scriptPluginSuffix=?at=refs/tags/2.2.1
