--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 buildscript {
     def buildScriptPlugins = ['scripts/common/buildscript-5.gradle']
-    println "> Applying script plugins in buildscripts:"
+    logger.info("> Applying script plugins in buildscripts:")
     for (scriptPlugin in buildScriptPlugins) {
         def pluginPath = "${scriptPluginPrefix}${scriptPlugin}${scriptPluginSuffix}${scriptPluginTag}"
-        println "${pluginPath}"
+        logger.info("${pluginPath}")
         apply from: pluginPath, to: buildscript
     }
 }
@@ -15,10 +15,10 @@ def scriptPlugins = ['scripts/common/gradle-version-5.gradle',
                      'scripts/python/build.gradle',
                      'scripts/python/version.gradle',
                      'scripts/python/publish.gradle']
-println "> Applying script plugins:"
+logger.info("> Applying script plugins:")
 for (scriptPlugin in scriptPlugins) {
     def pluginPath = "${scriptPluginPrefix}${scriptPlugin}${scriptPluginSuffix}${scriptPluginTag}"
-    println "${pluginPath}"
+    logger.info("${pluginPath}")
     apply from: pluginPath
 }
 
@@ -36,7 +36,7 @@ description = "AICS Image Processing toolbox"
 // Project version will be managed outside of gradle in accordance with PEP 440
 // ("https://www.python.org/dev/peps/pep-0440/")
 
-// To see the gradle plugin for python look at 
+// To see the gradle plugin for python look at
 // http://stash.corp.alleninstitute.org/projects/AICSSW/repos/gradle-script-plugins/browse/scripts/python/
 // Also read BUILD.md
 
