--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,10 @@
-include README.rst
+include CONTRIBUTING.md
+include LICENSE
+include README.md
+
+recursive-include tests *
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co]
+
+recursive-include docs *.rst conf.py Makefile make.bat *.jpg *.png *.gif
+graft aicsimageprocessing/data
