--- a/setup.cfg
+++ b/setup.cfg
@@ -1,23 +1,33 @@
+[bumpversion]
+current_version = 0.7.2
+commit = True
+tag = True
+
+[bumpversion:file:setup.py]
+search = {current_version}
+replace = {new_version}
+
+[bumpversion:file:aicsimageprocessing/__init__.py]
+search = {current_version}
+replace = {new_version}
+
 [bdist_wheel]
-universal=1
-
-[metadata]
-license_file = LICENSE.txt
-
-[aliases]
-test=pytest
-
-[tool:pytest]
-addopts = --junitxml=build/test_report.xml -v
-norecursedirs = aicsimageprocessing/tests/checkouts aicsimageprocessing.egg-info/*
-python_files = aicsimageprocessing/tests/*.py
+universal = 1
 
 [flake8]
-max-line-length = 130
+exclude = docs
+max-line-length = 88
+ignore =
+    # Whitespace before ':'
+    E203
+    # Whitepsace at end of line
+    W291
+    # Line break before logical
+    W503
 
-[coverage:html]
-directory = build/coverage_html
-title = Test coverage report for aicssegmentation
+[aliases]
+# Define setup.py command aliases here
+test = pytest
 
-[coverage:xml]
-output = build/coverage.xml
+[tool:pytest]
+collect_ignore = ['setup.py']
