Passing black and flake8 lint checks

--- a/tox.ini
+++ b/tox.ini
@@ -13,13 +13,14 @@ markers =
 deps =
     .[test]
 commands =
-    flake8 aicsimageprocessing --count --verbose --max-line-length=127 --show-source --statistics
+    flake8 aicsimageprocessing --count --verbose --max-line-length=88 --show-source --statistics
     black --check aicsimageprocessing
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
+    numpy>=1.16.4
     .[test]
 commands =
     pytest --basetemp={envtmpdir} --cov-report html --cov=aicsimageprocessing aicsimageprocessing/tests/
