--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -17,6 +17,7 @@ jobs:
     - name: Install Dependencies
       run: |
         pip install --upgrade pip
+        pip install numpy
         pip install .[dev]
     - name: Generate Docs
       run: |
@@ -29,4 +30,3 @@ jobs:
         BASE_BRANCH: master # The branch the action should deploy from.
         BRANCH: gh-pages # The branch the action should deploy to.
         FOLDER: docs/_build/html/ # The folder the action should deploy.
-
