--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install numpy
         pip install .[test]
     - name: Test with pytest
       run: |
