--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ markers =
 deps =
     .[test]
 commands =
-    flake8 aicsimageprocessing --count --verbose --max-line-length=88 --show-source --statistics
+    flake8 aicsimageprocessing --count --verbose --show-source --statistics
     black --check aicsimageprocessing
 
 [testenv]
